@@ -3,7 +3,9 @@
  <object name="editskin_switcher" meta_type="Plone Property Sheet">
   <property name="title">Collective Edit Skin Switcher Properties</property>
   <property name="edit_skin" type="string">Plone Default</property>
-  <property name="switch_skin_action" type="selection" select_variable="editSwitchList">based on edit URL</property>
+  <property name="switch_skin_action" type="multiple selection" select_variable="editSwitchList">
+   <element value="based on edit URL"/>
+  </property>
   <property name="specific_domains" type="lines"></property>
   <property name="need_authentication" type="boolean">False</property>
   <property name="admin_header" type="string">HTTP_PLONEADMIN</property>
